Update report files: refine section labels and improve figure placement in main.tex; adjust output details in main.log and main.pdf

--- a/report/main.tex
+++ b/report/main.tex
@@ -40,7 +40,7 @@
 
 \section{Question 1: Linear and Weighted Ridge Regression}
 
-\begin{figure}
+\begin{figure}[h!]
 \centering
 \includegraphics[width=0.8\textwidth]{./assets/regression_comparison.png}
 \caption{Comparison of predictions from linear, ridge and weighted ridge regression on the test set.}
